--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,9 @@
     "/webpyux/core/lib/widgets/Text/text.py",
     "/webpyux/core/lib/widgets/Chart/chart.py",
     "/webpyux/core/lib/widgets/Websocket/websocket.py",
-    "/app/config.ini"
+    "/app/config.ini",
+    "/app/modules/simple_test/simple_test.py"
+    "/app/modules/test/test.py"
     ]
 </py-config>
 <py-script src="/webpyux/core/app.py"></py-script>
