added first chart test

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
     "/webpyux/core/lib/widgets/Chart/chart.py",
     "/webpyux/core/lib/widgets/Websocket/websocket.py",
     "/app/config.ini",
-    "/app/modules/simple_test/simple_test.py"
+    "/app/modules/simple_test/simple_test.py",
     "/app/modules/test/test.py"
     ]
 </py-config>
